2007-10-22  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/Common/UIxPageFrame.m ([UIxPageFrame -commonLocalizableStrings])
	([UIxPageFrame -productLocalizableStrings]): invoke the new
	+[SOGoUser language] method if the user is nil.

	* SoObjects/SOGo/SOGoUser.m ([SOGoUser +language]): new method
	that returns any generically-found language.
	([SoUser -language]): modified to call the above.
	([SOGoUser -language]): modified to call the above if the user
	language has a null length.

	* SoObjects/Contacts/SOGoContactLDIFEntry.m ([SOGoContactLDIFEntry
	-davEntityTag]): modified to return the "hash" of the vCard string.

	* UI/MailerUI/UIxMailActions.m ([UIxMailActions
	-removeAllLabelsAction]): new method that removes all label flags
	from the associated message.
	([UIxMailActions -addLabel1Action]
	[UIxMailActions -addLabel2Action]
	[UIxMailActions -addLabel3Action
	[UIxMailActions -addLabel4Action]
	[UIxMailActions -addLabel5Action]): new methods that adds label
	flags to the associated message.
	([UIxMailActions -removeLabel1Action]
	[UIxMailActions -removeLabel2Action]
	[UIxMailActions -removeLabel3Action
	[UIxMailActions -removeLabel4Action]
	[UIxMailActions -removeLabel5Action]): new methods that removes
	label flags from the associated message.

	* UI/MailerUI/UIxMailListView.m ([UIxMailListView -msgLabels]):
	new accessor that returns the labels associated with the message.

	* SoObjects/Mailer/SOGoMailFolder.m ([SOGoMailFolder
	-allFolderPaths]): new method that returns all the paths of all
	the subfolders of the folder object.
	([SOGoMailFolder -allFolderURLs]): new method replacing
	subfoldersURL.

	* SoObjects/SOGo/SOGoContentObject.m ([SOGoContentObject
	-aclsForUser:uid]): object inherits the 'SOGoRole_ObjectEditor'
	role from its parent folder.

2007-10-19  Francis Lachapelle  <flachapelle@inverse.ca>

	* SoObjects/SOGo/SOGoUser.m 
	([SOGoUser -rolesForObject:objectinContext:context]): allow